--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "filament/filament": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/reverb": "^1.6",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "league/csv": "^9.27"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
